--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,20 +1,29 @@
 # .scrutinizer.yml
 
+filter:
+    paths:
+        - 'src/*'
+    excluded_paths:
+        - 'tests/*'
+        - 'vendor/*'
+
 checks:
     php:
         code_rating: true
         duplication: true
+
 build:
     image: default-jammy
     nodes:
         analysis:
-            environment:
-                php:
-                    version: 8.2
-    tests:
-        override:
-            -
-                command: 'XDEBUG_MODE=coverage bin/phpunit --coverage-clover=.coverage'
-                coverage:
-                    file: '.coverage'
-                    format: 'clover'
+            tests:
+                override:
+                    - php-scrutinizer-run
+        tests:
+            tests:
+                override:
+                    -
+                        command: 'XDEBUG_MODE=coverage bin/phpunit --coverage-clover=.coverage'
+                        coverage:
+                            file: '.coverage'
+                            format: 'clover'
