Add exclusive separator tests and RFC 5322 display name tests
- Add tests for exclusive separator behavior (comma-only, semicolon-only)
- Add tests for RFC 5322 compliant quoted display names with commas
- Add tests for unquoted display names with commas (correctly fail)
- Add 'separators' configuration option to testspec.yml
- Update ParseTest.php to handle custom separator configurations
- Improve error message for periods in display names (RFC 5322 reference)
- All 85 tests passing with comprehensive separator coverage

--- a/tests/testspec.yml
+++ b/tests/testspec.yml
@@ -83,7 +83,7 @@
         domain: ''
         ip: ''
         invalid: true
-        invalid_reason: 'Periods within the name of an email address must appear in quotes, such as "John Q. Public" <john@qpublic.com>'
+        invalid_reason: 'Periods within the display name of an email address must appear in quotes, such as "John Q. Public" <john@qpublic.com> according to RFC 5322'
 -
     emails: 'test.testing@asdf.ghjkl.com test.testing2@asdf.ghjkl.com'
     multiple: true
