back port separator changes (#43)
* back port separator changes

* Add exclusive separator and RFC 5322 quoted name tests

- Add 7 new test cases for exclusive separator behavior
- Test comma-only separator (semicolon doesn't work as separator)
- Test semicolon-only separator (comma doesn't work as separator)
- Test RFC 5322 compliant quoted display names with commas
- Test unquoted display names with commas (correctly fails)
- Add 'separators' configuration option to testspec.yml
- Update ParseTest.php to read custom separator configurations from tests
- All 92 tests passing (85 original + 7 new)

* Enable CI for 7.1 branch

* add 2.2 branch to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: [ main, master, develop, 2.2 ]
   pull_request:
-    branches: [ main, master, develop ]
+    branches: [ main, master, develop, 2.2 ]
 
 jobs:
   tests:
