Add RFC compliance modes with configurable ParseOptions presets
Replace hardcoded validation with configurable boolean rule properties
on ParseOptions. Add static factory presets: rfc5321() (strict ASCII),
rfc6531() (internationalized UTF-8 with NFC normalization and IDN),
rfc5322() (standard with obsolete syntax), and rfc2822() (max compat).

Includes quoted-string content validation, C0/C1 control character
rejection, domain literal validation, octet-based length enforcement,
and comprehensive test coverage via testspec.yml (~200+ assertions).

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,20 @@
 {
   "name": "mmucklo/email-parse",
   "type": "library",
-  "description": "email-parse a (reasonably) RFC822 / RF2822-compliant library for batch parsing multiple (and single) email addresses",
+  "description": "RFC 5322 / RFC 6531-compliant library for batch parsing multiple (and single) email addresses",
   "license": "MIT",
   "keywords": [
     "email",
     "parse",
+    "RFC5322",
+    "RFC6531",
     "RFC822",
     "RFC2822",
     "email-parse",
     "multiple-email",
-    "batch-email"
+    "batch-email",
+    "internationalized-email",
+    "UTF-8"
   ],
   "authors": [
     {
